Externalize JVM options